--- a/index.html
+++ b/index.html
@@ -97,31 +97,15 @@
 
 </br>
 
-<ul>
-<h1>References</h1>
-  <li><p>Frederic Vermeulen</p></li>
-  <li>Green</li>
-  <li>Blue</li>
+<ul class="references">
+<h2>References</h2>
+  <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><p>Frederic Vermeulen</p></li>
+  <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><p>Laurens Cherchye</p></li>
+  <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank"><p>Dirk Czarnitzki</p></li>
 </ul>
+
+	
 	  
-<div class="references-section">
-    <h2>References</h2>
-    <div class="reference-list">
-        <div class="reference">
-            <p>Frederic Vermeulen</p>
-            <a href="mailto:frederic.vermeulen@kuleuven.be">frederic.vermeulen@kuleuven.be</a>
-        </div>
-        <div class="reference">
-            <p>Laurens Cherchye </p>
-            <a href="mailto:Laurens.Cherchye@kuleuven.be">laurens.cherchye@kuleuven.be</a>
-        </div>
-        <div class="reference">
-            <p>Dirk Czarnitzki  </p>
-            <a href="mailto:dirk.czarnitzki@kuleuven.be">dirk.czarnitzki@kuleuven.be</a>
-        </div>    
-        <!-- Add more reference items here -->
-    </div>
-</div>
 
 
 
