--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
 	  
 
 </br>
-
+</br>
+	
 <ul class="references">
 <h2>References</h2>
-  <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><p>Frederic Vermeulen</p></li>
-  <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><p>Laurens Cherchye</p></li>
-  <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank"><p>Dirk Czarnitzki</p></li>
+  <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</li>
+  <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</li>
+  <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</li>
 </ul>
 
 	
