--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         
         <a style="margin: 0 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
-	  <i class="fab fa-x-twitter"></i>
+	  <i class="fab fa-twitter"></i>
 	</a>
         
 </div>
