--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
 </br>
 </br>
-	
+
+<div class="flex">	
 <ul>
 <h2>References</h2>
   <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</li>
@@ -105,6 +106,13 @@
   <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</li>
 </ul>
 
+<ul>
+<h2>References</h2>
+  <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</li>
+  <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</li>
+  <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</li>
+</ul>	
+</div>
 	
 	  
 
