--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 
 </br>
+</div>	
 
 <div class="social-icons">
         
