--- a/research.html
+++ b/research.html
@@ -42,8 +42,8 @@ function toggleAbstract(abstractId) {
 <h2 id="publications">Publications:<span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span></h2>
 
 <p> 	
-<div class="pubthumb">
-<img src="/files/jebo_cover.jpg" style="size:10rem;>
+<div class="pubthumb" style="size:10rem;>
+<img src="/files/jebo_cover.jpg" >
 </div>	
 <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
 <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205 <br>
