--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ function toggleAbstract(abstractId) {
 <h2 id="publications">Publications:<span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span></h2>
 
 <p> 	
-<div class="pubthumb" style="size:10rem;>
+<div class="pubthumb">
 <img src="/files/jebo_cover.jpg" >
 </div>	
 <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
