--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
 <p>
 <strong>Economic Evaluation of Economic Policy</strong>	 <br>
  KU Leuven	<br>
-T.A. for Prof. Frederic Vermeulen	<br>
+T.A. of Prof. Frederic Vermeulen	<br>
 Graduate level<br>
 Spring 2023	
 </p>
@@ -37,7 +37,7 @@ Spring 2023
 <p>
 <strong>Master's Thesis Advisor</strong>	 <br>
  KU Leuven	<br>	
-Thesis advisor for Prof. Frederic Vermeulen and Prof. Laurens Cherchye	<br>
+Thesis advisor of Prof. Frederic Vermeulen and Prof. Laurens Cherchye	<br>
 Graduate level<br>
 2022 - present	
 </p>
@@ -45,7 +45,7 @@ Graduate level<br>
 <p>
 <strong>Econometrics</strong>	 <br>
 Universidad Adolfo Ibañez <br>	
-T.A. for Prof. Julio Guzmán	<br>
+T.A. of Prof. Julio Guzmán	<br>
 Undergraduate level<br>
 Spring 2014 and Fall 2014
 </p>
