--- a/research.html
+++ b/research.html
@@ -106,6 +106,13 @@ Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" targe
 </p>
 <hr class="publication-divider">
 
+
+<p> 	
+<strong>Technology and intrahousehold resource allocation</strong><br>
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>
+<hr class="publication-divider">
+	
 	
 <p> 	
 <strong>Artificial Intelligence and the demand for labor: Evidence from German firm-level</strong><br>
