--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <link rel="stylesheet" href="/css/fonts.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css" integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/x-icon" href="/files/favicon.ico" />	  
+
+
+   <!-- Icon tab -->
+   <link rel="apple-touch-icon" sizes="180x180" href="/files/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="/files/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="/files/favicon-16x16.png">
+   <link rel="manifest" href="/files/site.webmanifest">
+   <link rel="mask-icon" href="/files/safari-pinned-tab.svg" color="#5bbad5">
+   <meta name="msapplication-TileColor" content="#da532c">
+   <meta name="theme-color" content="#ffffff">
+
 	  
     <!-- Dark Mode -->
     
