--- a/research.html
+++ b/research.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/fonts.css" />
 
+
+   <!-- Icon tab -->
+   <link rel="apple-touch-icon" sizes="180x180" href="/files/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="/files/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="/files/favicon-16x16.png">
+   <link rel="manifest" href="/files/site.webmanifest">
+   <link rel="mask-icon" href="/files/safari-pinned-tab.svg" color="#5bbad5">
+   <meta name="msapplication-TileColor" content="#da532c">
+   <meta name="theme-color" content="#ffffff">
+	
 <!-- Toggle abstract -->	
 <script>
 function toggleAbstract(abstractId) {
