--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,15 @@
   <title>Research | Gastón P. Fernández</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/fonts.css" />
+
+   <!-- Icon tab -->
+   <link rel="apple-touch-icon" sizes="180x180" href="/files/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="/files/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="/files/favicon-16x16.png">
+   <link rel="manifest" href="/files/site.webmanifest">
+   <meta name="msapplication-TileColor" content="#da532c">
+   <meta name="theme-color" content="#ffffff">
+	
 </head>
 <body>
   <!-- Simplified for brevity -->
