--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	 
         <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>
 
-        <p><span><b>I will be on the 2024/2025 academic job market. </b></span></p>
+        <p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
