--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
 	I am a Ph.D. student at the Economics Department of <span><b>KU Leuven</b></span>, Belgium. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
 	
 	<p>
-	I visited the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span>.  </p>
+	I visited the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span> (host: <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>).  </p>
 	 
-        <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>
-
-        <p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
+       <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
+	<p> My research focuses on <span><b>Family Economics</b></span>, <span><b>Child Development</b></span>, and <span><b>Labor Economics</b></span>. I am interested in the quantitative modeling of preferences and psychological traits within family dynamics, including household formation, resource allocation, and development of skills. I also study the impact of technological change on the demand for skills and labor market outcomes. To investigate these questions, I use a variety of methods, ranging from structural econometrics to causal inference techniques.</p>
+        
+	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
