--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
-
+</br>
 </div>	
 
 <div class="social-icons">
         
-        <a style="margin: 0 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
+        <a style="margin: -50px 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
 	  <i class="fab fa-twitter"></i>
 	</a>
 
