--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h1>Gastón P. Fernández</h1>
 
 	<p>
-	I am a Ph.D. student at the Economics Department of <a class="two" href="https://feb.kuleuven.be/research/economics/ces" target="_blank"><span><b>KU Leuven</b></span>. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
+	I am a Ph.D. student at the Economics Department of <a class="two" href="https://feb.kuleuven.be/research/economics/ces" target="_blank"><span><b>KU Leuven</b></span></a>. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
 	
 	<p>
 	I visited the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span> (host: <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>).  </p>
@@ -81,24 +81,24 @@
 
 <div class="social-icons">
         
-        <a style="margin: -150px 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
+        <a style="margin: -140px 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
 	  <i class="fab fa-twitter"></i>
 	</a>
 
-	<a style="margin: -150px 21px 0 0" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">
+	<a style="margin: -140px 21px 0 0" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
 
-        <a style="margin: -150px 21px 0 0" href="https://orcid.org/0000-0002-9605-389X" target="_blank">
+        <a style="margin: -140px 21px 0 0" href="https://orcid.org/0000-0002-9605-389X" target="_blank">
           <i class="fab fa-orcid"></i>
         </a>
 	
 	
-        <a style="margin: -150px 21px 0 0" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank">
+        <a style="margin: -140px 21px 0 0" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank">
           <i class="ai ai-google-scholar" style="font-size:1.55rem"></i>
         </a>  
         
-        <a style="margin: -150px 21px 0 0" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank">
+        <a style="margin: -140px 21px 0 -30px" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank">
 	<i class="ai ai-cv" style="font-size:1.8rem;"></i>
         </a>
 
