--- a/index.html
+++ b/index.html
@@ -81,24 +81,24 @@
 
 <div class="social-icons">
         
-        <a style="margin: -120px 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
+        <a style="margin: -100px 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
 	  <i class="fab fa-twitter"></i>
 	</a>
 
-	<a style="margin: -120px 21px 3000px 0" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">
+	<a style="margin: -100px 21px 0 0" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
 
-        <a style="margin: -120px 21px 100px 0" href="https://orcid.org/0000-0002-9605-389X" target="_blank">
+        <a style="margin: -100px 21px 0 0" href="https://orcid.org/0000-0002-9605-389X" target="_blank">
           <i class="fab fa-orcid"></i>
         </a>
 	
 	
-        <a style="margin: -120px 221px 0 0" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank">
+        <a style="margin: -100px 0 0 0" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank">
           <i class="ai ai-google-scholar" style="font-size:1.55rem"></i>
         </a>  
         
-        <a style="margin: -120px 21px 0 -3000px" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank">
+        <a style="margin: -100px 100px 0 0" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank">
 	<i class="ai ai-cv" style="font-size:1.8rem;"></i>
         </a>
 
