--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
 	<p> My research focuses on <span><b>Family Economics</b></span>, <span><b>Child Development</b></span>, and <span><b>Labor Economics</b></span>.</p> 
 	
-	<p> I am interested in the quantitative modeling of preferences and psychological traits within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on the demand for skills and labor market outcomes. To investigate these questions, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
+	<p> I am interested in the quantitative modeling of personal attributes within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on the demand for skills and labor market outcomes. To investigate these questions, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
