--- a/research.html
+++ b/research.html
@@ -129,7 +129,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 	
 
 <p> 	
-<strong>Technology and intrahousehold resources allocation</strong><br>
+<strong>Technological change and intrahousehold resources allocation</strong><br>
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>
 <hr class="publication-divider">
