--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	I visited the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span> (host: <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>).  </p>
 	 
        <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
-	<p> My research focuses on <span><b>Family Economics</b></span>, <span><b>Child Development</b></span>, and <span><b>Labor Economics</b></span>.</p> 
+	<p> Fields of research: <span><b>Family Economics</b></span>, <span><b>Child Development</b></span>, <span><b>Labor Economics</b></span>.</p> 
 	
 	<p> I am interested in the quantitative modeling of personal attributes within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on the demand for skills and labor market outcomes. To investigate these questions, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
         
