--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
   <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</a></li>
 </ul>
 </div>
-	
+<style> .third { width: 33.33%; float: left; } </style>
+<div class="third"> Something </div>
+<div class="third"> Something </div>
+<div class="third"> Something </div>	
 	  
 
 
