--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
 </ul>
 </div>
 <style> .third { width: 33.33%; float: left; } </style>
-<div class="third"> Something </div>
+<div class="third"> <ul>
+<h2>References</h2>
+  <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
+  <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
+  <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</a></li>
+</ul> </div>
 <div class="third"> Something </div>
 <div class="third"> Something </div>	
 	  
