--- a/index.html
+++ b/index.html
@@ -115,25 +115,30 @@
 </div>
 	  
 
-
-<div class="flex">	
-<ul>
-<h2>References</h2>
-  <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
-  <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
-  <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</a></li>
-</ul>
-</div>
 <style> .third { width: 33.33%; float: left; } </style>
+<div class="third"> <ul>
+<h2>Research interests:</h2>
+  <li> Family economics </li>
+  <li> Child development</li>
+  <li> Technological change</li>
+</ul> 
+</div>
+	  
 <div class="third"> <ul>
 <h2>References</h2>
   <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
   <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
   <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</a></li>
-</ul> </div>
-<div class="third"> Something </div>
-<div class="third"> Something </div>	
-	  
+</ul> 
+</div>
+
+<div class="third"> <ul>
+<h2>Contact:</h2>
+  <li> Family economics </li>
+  <li> Child development</li>
+  <li> Technological change</li>
+</ul> 
+</div>	  
 
 
 
