--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </div>
 	  
 
-<style> .third { width: 33.33%; float: left; } </style>
+<style> .third { width: 35%; float: left; } </style>
 <div class="third"> <ul>
 <h2>Research interests:</h2>
   <li> Family economics </li>
@@ -125,7 +125,7 @@
 </div>
 	  
 <div class="third"> <ul>
-<h2>References</h2>
+<h3>References:</h3>
   <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
   <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
   <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</a></li>
@@ -133,10 +133,12 @@
 </div>
 
 <div class="third"> <ul>
-<h2>Contact:</h2>
-  <li> Family economics </li>
-  <li> Child development</li>
-  <li> Technological change</li>
+<h4>Contact:</h4>
+  <li> Department of Economics</li>
+<li> Faculty of Economics and Business, KU Leuven	</li>
+<li> 3000 Leuven, Naamsestraat 69, box 3565	 </li>
+  <li> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></li>
+  
 </ul> 
 </div>	  
 
