--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 </br>
+</br>	
 </div>	
 
 <div class="social-icons">
@@ -132,6 +133,9 @@
 </ul> 
 </div>
 
+<div class="third"> <ul>
+</ul> 
+</div>
 
 
 
