--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
 </br>
 <hr/>
 	
-<footer>
+<!-- <footer>
   
   
   
   © Gastón P. Fernández, 2024
   
 </footer>
-
+ -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH28BD7JPP"></script>
 <script>
