--- a/index.html
+++ b/index.html
@@ -125,8 +125,15 @@
 </ul> 
 </div>
 
-<div class="third"> <ul>
-</ul> 
+<style> .foot { width: 100%; float: left; } </style>	  
+<div class="foot"> 
+	<footer>
+  
+  
+  
+  © Gastón P. Fernández, 2024
+  
+</footer>
 </div>
 
 
@@ -140,14 +147,8 @@
 </br>
 <hr/>
 	
-<!-- <footer>
-  
-  
-  
-  © Gastón P. Fernández, 2024
-  
-</footer>
- -->
+
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH28BD7JPP"></script>
 <script>
