--- a/index.html
+++ b/index.html
@@ -125,14 +125,19 @@
 </ul> 
 </div>
 
+<div class="third"> <ul>
+<h3 style="display:none"> References:</h3>
+</ul> 
+</div>	  
+
 <style> .foot { width: 100%; float: left; } </style>	  
 <div class="foot"> 
 	<footer>
   
-<!--   
+  
   
   © Gastón P. Fernández, 2024
-   -->
+  
 </footer>
 </div>
 
