--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </ul> 
 </div>	  
 
-<style> .foot { width: 100%; float: left; } </style>	  
+<!-- <style> .foot { width: 100%; float: left; } </style>	   -->
 <div class="foot"> 
 	<footer>
   
