--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
 	
 <div class="social-icons">
         
-        <a style="margin: -100px 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
+        <a style="margin: -100px 0 0 100px" href="https://x.com/GastFernandezB" target="_blank">
 	  <i class="fab fa-twitter"></i>
 	</a>
 
-	<a style="margin: -100px 60px 0 0" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">
+	<a style="margin: -100px 60px 0 200px" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
 
-        <a style="margin: -100px 120px 0 0" href="https://orcid.org/0000-0002-9605-389X" target="_blank">
+        <a style="margin: -100px 120px 0 300px" href="https://orcid.org/0000-0002-9605-389X" target="_blank">
           <i class="fab fa-orcid"></i>
         </a>
 	
