--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </ul> 
 </div>
 
-<div class="third"> 
+<div class="third">  <ul>
 	
 <div class="social-icons">
         
@@ -152,6 +152,7 @@
 
         
 </div>
+	</ul> 
 </div>
   
 
