--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <i class="ai ai-google-scholar" style="font-size:1.55rem"></i>
         </a>  
         
-        <a style="margin: 0px 45px 0 0" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank">
+        <a style="margin: 0px 40px 0 0" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank">
 	<i class="ai ai-cv" style="font-size:1.8rem;"></i>
         </a>
 
@@ -110,7 +110,7 @@
 
 <style> .third { width: 35%; float: left; } </style>
 <div class="third"> <ul>
-<h3>Research interests:</h3>
+<h3 style="margin: 20px 0 0 0">Research interests:</h3>
   <li> Family economics </li>
   <li> Child development</li>
   <li> Technological change</li>
