--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 	  
 
 <style> .third { width: 35%; float: left; } </style>
-<div class="third"> <ul>
-<h3 style="margin: 20px 0 0 0">Research interests:</h3>
+<div class="third" style="margin: 20px 0 0 0"> <ul>
+<h3 >Research interests:</h3>
   <li> Family economics </li>
   <li> Child development</li>
   <li> Technological change</li>
