--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         
 </div>
 	  
-
+<div class="content-area">	
 <style> .third { width: 35%; float: left; } </style>
 <div class="third" style="margin: 20px 0 0 0"> <ul>
 <h3 >Research interests:</h3>
@@ -127,7 +127,7 @@
 
 
 </div>
-  
+  </div>
 
 <!-- <style> .foot { width: 100%; float: left; } </style>	   -->
 <div class="foot"> 
