--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
+
+	  
+<style> .third { width: 35%; float: left; } </style>
+<div class="third" style="margin: 20px 0 0 0"> <ul>
+<h3 >Research interests:</h3>
+  <li> Family economics </li>
+  <li> Child development</li>
+  <li> Technological change</li>
+</ul> 
+</div>
+	  
+<div class="third"> <ul>
+<h3>References:</h3>
+  <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
+  <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
+  <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</a></li>
+</ul> 
+</div>	
 </br>
 </br>
 </br>		
