--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
 
 	
-	<p> I am applied microeconomist interested in the quantitative modeling of personal attributes within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on the demand for skills and labor market outcomes. To investigate these topics, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
+	<p> I am an applied microeconomist interested in the quantitative modeling of personal attributes within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on the demand for skills and labor market outcomes. To investigate these topics, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
@@ -79,7 +79,7 @@
 
 	  
 <style> .third { width: 35%; float: left; } </style>
-<div class="third" style="margin: 20px 0 0 0"> <ul>
+<div class="third" style="margin: 0 0 0 0"> <ul>
 <h3 >Research interests:</h3>
   <li> Family economics </li>
   <li> Child development</li>
