--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </br>
 	  
 <style> .third { width: 45%; float: left; } </style>
-<div class="third" style="margin: 0 0 0 0"> <ul>
+<div class="third" style="margin: 0 0 -20px 0"> <ul>
 <h3 >Research interests:</h3>
   <li> Family economics </li>
   <li> Child development</li>
