--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </br>
 	  
 <style> .third { width: 45%; float: left; } </style>
-<div class="third" style="margin: 0 0 -20px 0"> <ul>
+<div class="third" style="margin: 0 -20px 0px 0"> <ul>
 <h3 >Research interests:</h3>
   <li> Family economics </li>
   <li> Child development</li>
@@ -87,7 +87,7 @@
 </ul> 
 </div>
 	  
-<div class="third"> <ul>
+<div class="third" style="margin: 0 -20px 0px 0"> <ul>
 <h3>References:</h3>
   <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
   <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
