--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 </br>
 	  
 <style> .third { width: 45%; float: left; } </style>
-<div class="third" style="margin: 0 -20px 0px 0"> <ul>
+<div class="third" style="margin: 0 -20px 0px 0"> 
 <h3 >Research interests:</h3>
   <li> Family economics </li>
   <li> Child development</li>
   <li> Technological change</li>
-</ul> 
+
 </div>
 	  
 <div class="third" style="margin: 0 -20px 0px 0"> <ul>
