--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
 
 </div>
 	  
-<div class="third" style="margin: 0 -20px 0px 0"> <ul>
+<div class="third" style="margin: 0 -20px 0px 0"> 
 <h3>References:</h3>
   <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
   <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
   <li><a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00046474" target="_blank">Dirk Czarnitzki</a></li>
-</ul> 
+
 </div>	
+
+
 </br>
 </br>
 </br>		
