--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 </br>
 	  
-<style> .third { width: 45%; float: left; } </style>
+<!-- <style> .third { width: 45%; float: left; } </style> -->
 <div class="third" style="margin: 0 -20px 0px 0"> 
 <h3 >Research interests:</h3>
   <li> Family economics </li>
