--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h1>Gastón P. Fernández</h1>
 
 	<p>
-	I am a third-year Ph.D. student at the Economics Department of <a class="two" href="https://feb.kuleuven.be/research/economics/ces" target="_blank"><span><b>KU Leuven</b></span></a>. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
+	I am a Ph.D. candidate at the Economics Department of <a class="two" href="https://feb.kuleuven.be/research/economics/ces" target="_blank"><span><b>KU Leuven</b></span></a>. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
 	
 	<p>
 	I visited the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span> (host: <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>).  </p>
@@ -69,7 +69,7 @@
        <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
 
 	
-	<p> I am an applied microeconomist interested in the quantitative modeling of personal attributes within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on the demand for skills and labor market outcomes. To investigate these topics, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
+	<p> My research is on applied microeconomics. I am interested in the quantitative modeling of personal attributes within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on the demand for skills and labor market outcomes. To investigate these topics, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
