--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 	
       <li><a href="/files/CV_GastonFernandezBarros.pdf" target="_blank">cv</a></li>
       
-      <li><a href="/contact.html">contact</a></li>   	    	    
+      <li><a href="/contact.html">contact</a></li>   	
+
+      <li><a href="/newtab.html" class="special-tab">Job Market</a></li>	    
       
     </ul>
     <hr/>
