--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
+	<p><span><b><a class="two" href="https://gaston-fernandez.github.io/research.html" target="_blank">My Job Market Paper is here</a>. Additional Job Market information can be found <a class="two" href="https://gaston-fernandez.github.io/newtab.html" target="_blank">here</a>. </b></span></p>
+
 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
