--- a/research.html
+++ b/research.html
@@ -46,6 +46,7 @@ function toggleAbstract(abstractId) {
       
       <li><a href="/contact.html">contact</a></li>   	    	    
       
+      <li><a href="/newtab.html" class="special-tab">Job Market Info</a></li>	    
     </ul>
     <hr/>
   </nav>
