--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
       <li><a href="/contact.html">Contact</a></li>   	
 
-      <li><a href="/newtab.html" class="special-tab">Job Market Info</a></li>	    
+      <li><a href="/job_market.html" class="special-tab">Job Market Info</a></li>	    
       
     </ul>
     <hr/>
