--- a/research.html
+++ b/research.html
@@ -82,6 +82,17 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 </br> 
 <h2 id="work-in-progress">Work in progress: <span><div class="subheading"> (<em>including completed working papers</em>)</div></span></h2>
 
+
+<p> 	
+<strong>Parental personality and child skills formation</strong><br>
+<span style="color: maroon;"> <strong> [Job Market Paper]</strong></span><br>	
+<em>Presented at: TSE Economics of Education Workshop 2024, New Advances in Family Economics Workshop (poster) 2024, AFÉPOP 2024, Tilburg Structural Econometrics Seminar 2024, LEER 2024, Leuven Applied Micro Workshop 2024</em><br>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract6')">Abstract</a> · Draft soon </a> </span>
+<div id="abstract6" style="display:none; font-size: 80%;">This paper studies the influence of parental personality on child development throughout the life cycle. Leveraging detailed individual-level data from the PSID and its Child Development and Wellbeing Supplements, we show significant heterogeneity concerning parental personality, children’s skills, accepted wages, and time-use decisions. Firstly, we observe that personality traits impact parents’ wages and time allocation between market work and child-rearing. Secondly, our result suggests systematic heterogeneity in the relative input productivity (or quality) of childcare time across parents with different personality levels. To provide a rationale for these observed patterns, we identify and estimate a life-cycle model that incorporates parental personality and considers household decisions with an endogenous technology for a child’s cognitive and non-cognitive skill formation. We employ the estimated model to determine the optimal targeting of simulated interventions tailored to children from parents with diverse personality traits. Our results reveal the limitations of one-size-fits-all parenting support and child welfare policies that do not acknowledge the diverse impacts of parental personality on child development.</div>	
+</p>
+<hr class="publication-divider">
+
+	
 <p> 	
 <strong>Does personality affect the allocation of resources within households?</strong><br>
 <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
@@ -102,14 +113,6 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <hr class="publication-divider">
 
 	
-<p> 	
-<strong>Parental personality and child skills formation</strong><br>
-<span style="color: maroon;"> <strong> [Job Market Paper]</strong></span><br>	
-<em>Presented at: TSE Economics of Education Workshop 2024, New Advances in Family Economics Workshop (poster) 2024, AFÉPOP 2024, Tilburg Structural Econometrics Seminar 2024, LEER 2024, Leuven Applied Micro Workshop 2024</em><br>
-<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract6')">Abstract</a> · Draft soon </a> </span>
-<div id="abstract6" style="display:none; font-size: 80%;">This paper studies the influence of parental personality on child development throughout the life cycle. Leveraging detailed individual-level data from the PSID and its Child Development and Wellbeing Supplements, we show significant heterogeneity concerning parental personality, children’s skills, accepted wages, and time-use decisions. Firstly, we observe that personality traits impact parents’ wages and time allocation between market work and child-rearing. Secondly, our result suggests systematic heterogeneity in the relative input productivity (or quality) of childcare time across parents with different personality levels. To provide a rationale for these observed patterns, we identify and estimate a life-cycle model that incorporates parental personality and considers household decisions with an endogenous technology for a child’s cognitive and non-cognitive skill formation. We employ the estimated model to determine the optimal targeting of simulated interventions tailored to children from parents with diverse personality traits. Our results reveal the limitations of one-size-fits-all parenting support and child welfare policies that do not acknowledge the diverse impacts of parental personality on child development.</div>	
-</p>
-<hr class="publication-divider">
 
 	
 <p> 	
@@ -143,6 +146,23 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 Joint with <a class="two" href="https://scholar.google.com/citations?user=NyyKx1cAAAAJ&hl=en&oi=ao" target="_blank">Leonardo Cáceres</a><br>		
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>	
+<hr class="publication-divider">
+
+<p> 	
+<strong>Legal cohabitation, household insurance, and female labor supply</strong><br>
+Joint with <a class="two" href="https://sites.google.com/view/valeriacordova" target="_blank">Valeria Cordova and <a class="two" href="https://www.wietseleleu.com/home" target="_blank">Wietse Leleu</a><br>		
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>		
+<hr class="publication-divider">
+
+
+<p> 	
+<strong>Female Human Capital and Household Dynamics</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=GqTkEC0AAAAJ&hl=en" target="_blank">Marcos Balmaceda</a><br>		
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>		
+<hr class="publication-divider">	
+
 	
 </br>
 </br>
