--- a/research.html
+++ b/research.html
@@ -124,6 +124,13 @@ Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" targe
 </p>
 <hr class="publication-divider">
 
+<p> 	
+<strong>What explains the gains from a stable marriage? A revealed preference analysis</strong><br>
+Joint with <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a><br>		
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>		
+<hr class="publication-divider">	
+
 	
 <p> 	
 <strong>Artificial Intelligence and the demand for labor: Evidence from German firm-level</strong><br>
@@ -150,18 +157,20 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=NyyKx1
 
 <p> 	
 <strong>Legal cohabitation, household insurance, and female labor supply</strong><br>
-Joint with <a class="two" href="https://sites.google.com/view/valeriacordova" target="_blank">Valeria Cordova and <a class="two" href="https://www.wietseleleu.com/home" target="_blank">Wietse Leleu</a><br>		
+Joint with <a class="two" href="https://sites.google.com/view/valeriacordova" target="_blank">Valeria Cordova</a>,  <a class="two" href="https://www.wietseleleu.com/home" target="_blank">Wietse Leleu</a><br>		
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>		
 <hr class="publication-divider">
 
 
 <p> 	
-<strong>Female Human Capital and Household Dynamics</strong><br>
+<strong>Female human capital investment and household dynamics</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=GqTkEC0AAAAJ&hl=en" target="_blank">Marcos Balmaceda</a><br>		
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>		
 <hr class="publication-divider">	
+
+
 
 	
 </br>
