--- a/research.html
+++ b/research.html
@@ -97,7 +97,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <strong>Does personality affect the allocation of resources within households?</strong><br>
 <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
 <span style="font-size: 80%;"> <a href="javascript:void(0);" onclick="toggleAbstract('abstract3')">Abstract</a> · <a class="two" href="/files/GastonFernandezKUL_20240403_REHO.pdf" target="_blank">Working paper</a> </span><br>
-<span style="font-size: 90%;"><strong>STATUS:</strong> R&R at <em>Review of Economics of the Household</em> </span> 
+<span style="font-size: 90%; style="color: maroon;"><strong>STATUS:</strong> R&R at <em>Review of Economics of the Household</em> </span> 
 <div id="abstract3" style="display:none; font-size: 80%;">This paper examines whether personality influences the allocation of resources within households. To do so, I model households as couples that make Pareto-efficient allocations and divide resources according to a distribution function. Using a sample of Dutch couples from the LISS survey with detailed information on consumption, labor supply, and personality traits at the individual level, I find that personality affects intrahousehold allocations through two channels. Firstly, the level of these traits act as preference factors that shape individual tastes for consumed goods and leisure time. Secondly, by testing distribution factor proportionality and the exclusion restriction of a conditional demand system, I observe that differences in personality between spouses act as distribution factors. Specifically, these differences in personality impact the allocation of resources by affecting the bargaining process within households. For example, women who are relatively more conscientious and engage more cognitively than their male partners receive a larger share of intrafamily resources.</div>	
 </p>
 <hr class="publication-divider">
@@ -107,7 +107,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
 <em>Presented at: CISS 2023  </em><br>
 <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract4')">Abstract</a> · <a class="two" href="/files/MSI_2402.pdf" target="_blank">Working paper</a> </span><br>
-<span style="font-size: 90%;"><strong>STATUS:</strong> Under revision </span> 
+<span style="font-size: 90%; style="color: maroon;"><strong>STATUS:</strong> Under revision </span> 
 <div id="abstract4" style="display:none; font-size: 80%;">Artificial Intelligence (AI) is considered to be the next general-purpose technology, with the potential of performing tasks commonly requiring human capabilities. While it is commonly feared that AI replaces labor and disrupts jobs, we instead investigate the potential of AI for overcoming increasingly alarming skills shortages in firms. We exploit unique German survey data from the Mannheim Innovation Panel on both the adoption of AI and the extent to which firms experience scarcity of skills. We measure skills shortage by the number of job vacancies that could not be filled as planned by firms, distinguishing among different types of skills. To account for the potential endogeneity of skills shortage, we also implement instrumental variable estimators. Overall, we find a positive and significant effect of skills shortage on AI adoption, the breadth of AI methods, and the breadth of areas of application of AI. In addition, we find evidence that scarcity of labor with academic education relates to firms exploring and adopting AI.</div>	
 </p>
 <hr class="publication-divider">
@@ -127,7 +127,8 @@ Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" targe
 <p> 	
 <strong>What explains the gains from a stable marriage? A revealed preference analysis</strong><br>
 Joint with <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a><br>		
-<span style="font-size: 80%;">Draft soon </a> </span>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract6')">Abstract</a> · Draft soon </a> </span>
+<div id="abstract6" style="display:none; font-size: 80%;">This paper presents a structural empirical analysis of the relative importance of multiple characteristics explaining marriage market outcomes over time. We exploit detailed information at the individual level from the HILDA survey about consumption, labor supply, time use, and several characteristics such as demographics, cognitive skills, and personality traits. We apply revealed preference restrictions to our sample to test for efficient household consumption with stable marriages and recover the material and nonmaterial gains from marriage. We analyze the evolution of these outcomes over time and the explanatory power of several individual characteristics.  </div>	
 </p>		
 <hr class="publication-divider">	
 
