--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@ function toggleAbstract(abstractId) {
       
       <li><a href="/contact.html">Contact</a></li>   	    	    
       
-      <li><a href="/newtab.html" class="special-tab">Job Market Info</a></li>	    
+      <li><a href="/job_market.html" class="special-tab">Job Market Info</a></li>	    
     </ul>
     <hr/>
   </nav>
