--- a/job_market.html
+++ b/job_market.html
@@ -39,7 +39,12 @@
   </nav>
 <h2 id="job_market">Job Market information:</h2>	
 
-  
+<strong> Job Market Paper</strong> <be>
+
+<strong> Research statement</strong> <be>
+<strong> Teaching statement</strong> <be>	
+<strong> Inclusivity statement</strong> <br>	
+	
 <strong> Contact:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
 
