--- a/job_market.html
+++ b/job_market.html
@@ -39,10 +39,11 @@
   </nav>
 <h2 id="job_market">Job Market information:</h2>	
 
-<strong> Job Market Paper</strong> <be>
+<strong> Job Market Paper</strong> <br>
 
-<strong> Research statement</strong> <be>
-<strong> Teaching statement</strong> <be>	
+<strong> Research statement</strong> <br>
+<strong> Teaching statement</strong> <br>
+	
 <strong> Inclusivity statement</strong> <br>	
 	
 <strong> Contact:</strong> <br>
