--- a/job_market.html
+++ b/job_market.html
@@ -49,6 +49,24 @@
 <strong> Contact:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
 
+	\begin{tabular}{llll}
+
+		\textbf{Prof. Laurens Cherchye}  			& \textbf{Prof. Frederic Vermeulen}                   &                  &  \\
+	Full Professor 							& Full Professor 	                                        &  \\
+	Faculty of Economics and Business  					& Faculty of Economics and Business                        		&  \\
+	KU Leuven &  KU Leuven			&  \\
+
+	\email{laurens.cherchye@kuleuven.be} &  \email{frederic.vermeulen@kuleuven.be}      	&  \\
+	&                                         &  \\
+	\textbf{Prof. Edoardo Ciscato}                       &  \textbf{Prof. Dirk Czarnitzki}   \\
+	Associate Professor                                  &  	Full Professor \\
+	Faculty of Economics and Business                      			 &  Faculty of Economics and Business                  \\
+KU Leuven &  KU Leuven   \\
+
+	\email{edoardo.ciscato@kuleuven.be}	                			 & \email{dirk.czarnitzki@kuleuven.be} \\
+
+	\end{tabular}	
+
 </p>	
 </br>
 </br>
