--- a/job_market.html
+++ b/job_market.html
@@ -49,23 +49,28 @@
 <strong> Contact:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
 
-	\begin{tabular}{llll}
-
-		\textbf{Prof. Laurens Cherchye}  			& \textbf{Prof. Frederic Vermeulen}                   &                  &  \\
-	Full Professor 							& Full Professor 	                                        &  \\
-	Faculty of Economics and Business  					& Faculty of Economics and Business                        		&  \\
-	KU Leuven &  KU Leuven			&  \\
-
-	\email{laurens.cherchye@kuleuven.be} &  \email{frederic.vermeulen@kuleuven.be}      	&  \\
-	&                                         &  \\
-	\textbf{Prof. Edoardo Ciscato}                       &  \textbf{Prof. Dirk Czarnitzki}   \\
-	Associate Professor                                  &  	Full Professor \\
-	Faculty of Economics and Business                      			 &  Faculty of Economics and Business                  \\
-KU Leuven &  KU Leuven   \\
-
-	\email{edoardo.ciscato@kuleuven.be}	                			 & \email{dirk.czarnitzki@kuleuven.be} \\
-
-	\end{tabular}	
+	 <table>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>City</th>
+        </tr>
+        <tr>
+            <td>John Doe</td>
+            <td>30</td>
+            <td>New York</td>
+        </tr>
+        <tr>
+            <td>Jane Smith</td>
+            <td>25</td>
+            <td>Los Angeles</td>
+        </tr>
+        <tr>
+            <td>Bob Johnson</td>
+            <td>45</td>
+            <td>Chicago</td>
+        </tr>
+    </table>
 
 </p>	
 </br>
