--- a/job_market.html
+++ b/job_market.html
@@ -48,28 +48,27 @@
 	
 <strong> Contact:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
-
+<h1>References</h1>
 	 <table>
         <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>City</th>
+            <th>Laurens Cherchye</th>
+            <th>Full Professor</th>
+            <th>Faculty of Economics and Business</th>
+	    <th>KU Leuven</th>		
         </tr>
         <tr>
-            <td>John Doe</td>
-            <td>30</td>
-            <td>New York</td>
+            <td>Frederic Vermeulen</td>
+            <td>Full Professor</td>
+            <th>Faculty of Economics and Business</th>		
+            <td>KU Leuven</td>
         </tr>
         <tr>
             <td>Jane Smith</td>
-            <td>25</td>
-            <td>Los Angeles</td>
+            <td>Full Professor</td>
+            <th>Faculty of Economics and Business</th>		
+            <td>KU Leuven</td>
         </tr>
-        <tr>
-            <td>Bob Johnson</td>
-            <td>45</td>
-            <td>Chicago</td>
-        </tr>
+
     </table>
 
 </p>	
