--- a/job_market.html
+++ b/job_market.html
@@ -52,23 +52,35 @@
 	 <table>
         <tr>
             <th>Laurens Cherchye</th>
-            <th>Full Professor</th>
-            <th>Faculty of Economics and Business</th>
-	    <th>KU Leuven</th>		
+            <th>Frederic Vermeulen</th>
+            <th>Edoardo Ciscato</th>
+	    	
         </tr>
         <tr>
-            <td>Frederic Vermeulen</td>
             <td>Full Professor</td>
-            <th>Faculty of Economics and Business</th>		
-            <td>KU Leuven</td>
+            <td>Full Professor</td>
+            <td>Full Professor</td>
         </tr>
         <tr>
-            <td>Jane Smith</td>
-            <td>Full Professor</td>
-            <th>Faculty of Economics and Business</th>		
-            <td>KU Leuven</td>
+            <td>Faculty of Economics and Business</td>		
+            <td>Faculty of Economics and Business</td>		
+            <td>Faculty of Economics and Business</td>		
+            
         </tr>
 
+        <tr>
+            <td>KU Leuven</td>
+            <td>KU Leuven</td>
+            <td>KU Leuven</td>
+        </tr>		 
+
+        <tr>
+            <td><a href="mailto:laurens.cherchye@kuleuven.be">laurens.cherchye@kuleuven.be</a><br></td>
+            <td><a href="mailto:frederic.vermeulen@kuleuven.be">frederic.vermeulen@kuleuven.be</a><br></td>
+            <td><a href="mailto:edoardo.ciscato@kuleuven.be">edoardo.ciscato@kuleuven.be</a><br></td>
+        </tr>		 
+
+		 
     </table>
 
 </p>	
