--- a/job_market.html
+++ b/job_market.html
@@ -40,12 +40,13 @@
 <h2 id="job_market">Job Market information:</h2>	
 
 <strong> Job Market Paper</strong> <br>
-
-<strong> Research statement</strong> <br>
+<br>
+<strong> Research statement</strong> <be>
+<br>	
 <strong> Teaching statement</strong> <br>
-	
+<br>	
 <strong> Inclusivity statement</strong> <br>	
-	
+<br>	
 <strong> Contact:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
 <br>
