--- a/job_market.html
+++ b/job_market.html
@@ -39,13 +39,13 @@
   </nav>
 <h2 id="job_market">Job Market information:</h2>	
 
-<strong> Job Market Paper</strong> <br>
+<strong> Job Market Paper</strong>: <i>download here</i> <br>
 <br>
-<strong> Research statement</strong> <be>
+<strong> Research statement</strong>: <i>download here</i> <br>
 <br>	
-<strong> Teaching statement</strong> <br>
+<strong> Teaching statement</strong>: <i>download here</i> <br>
 <br>	
-<strong> Inclusivity statement</strong> <br>	
+<strong> Inclusivity statement</strong>: <i>download here</i> <br>	
 <br>	
 <strong> Contact:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
