--- a/job_market.html
+++ b/job_market.html
@@ -47,8 +47,8 @@
 <br>	
 <strong> Inclusivity statement</strong>: <i>download here</i> <br>	
 <br>	
-<strong> Contact:</strong> <br>
-<a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
+<strong> Contact:</strong> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a>
+<br>
 <br>
 <br>
 <br>	
