--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 	<p><span><a class="two" href="https://gaston-fernandez.github.io/research.html" target="_blank">Get my Job Market Paper here</a>. </span></p>
 		
-	<p><span>Additional Job Market information can be found <a class="two" href="https://gaston-fernandez.github.io/newtab.html" target="_blank">here</a>.</span></p>
+	<p><span>Additional Job Market information can be found <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank">here</a>.</span></p>
 
 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
